# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
include/: app.hpp  background.hpp  camera.hpp  common.hpp  film.hpp  material.hpp  object.hpp  orthographic_camera.hpp  ortographic_camera.hpp  param_set.hpp  parser.hpp  perspective_camera.hpp  point_2d.hpp  point_3d.hpp  primitive.hpp  ray.hpp  rgb_color.hpp  scene.hpp  sphere.hpp  surfel.hpp  value_type.hpp  vector.hpp  window_size.hpp
lib_tinyxml2/: tinyxml2.cpp  tinyxml2.h
scenes/: scene01.xml  scene02.xml
src/: app.cpp  app.hpp  background.cpp  background.hpp  common.hpp  film.cpp  film.hpp  main.cpp  orthographic_camera.cpp  ortographic_camera.cpp  parser.cpp  perspective_camera.cpp  point_3d.cpp  sphere.cpp  tinyxml2.cpp  vector.cpp
